--- a/comics.html
+++ b/comics.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="libros, literatura, libreria, comics, accion, superheroes, lectura">
+    <meta name="description" content="">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>LiveInBooks</title>
+    <title>Comics - LiveInBooks</title>
 </head>
 
 <body>
@@ -62,7 +64,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-productos">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -95,7 +97,7 @@
             </button>
         </div>
 
-        <h3 class="h3-libros">Genero: 1</h3>
+        <h3 class="h3-libros estilo-comics">Genero: 1</h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -124,7 +126,7 @@
             <button type="button" class="btn btn-success">Ver más</button>
         </div>
 
-        <h3 class="h3-libros">Genero: 2</h3>
+        <h3 class="h3-libros estilo-comics">Genero: 2</h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -185,7 +187,7 @@
             </button>
         </div>
 
-        <h3 class="h3-libros">Genero 3 </h3>
+        <h3 class="h3-libros estilo-comics">Genero 3 </h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -215,7 +217,7 @@
             <button type="button" class="btn btn-success">Ver más</button>
         </div>
 
-        <h3 class="h3-libros">Genero: 4</h3>
+        <h3 class="h3-libros estilo-comics">Genero: 4</h3>
 
         <div class="containerFigure">
 
@@ -277,7 +279,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4 footer-col">
-                    <h3 class="h3__Footer">Navegación</h3>
+                    <h3 class="h3-footer">Navegación</h3>
                     <ul class="ul-footer">
                         <li>Libros</li>
                         <li>Mangas</li>
