--- a/libros.html
+++ b/libros.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="libros, literatura, libreria, terror, romance, misterio, fantasia, lectura">
+    <meta name="description" content="">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>LiveInBooks</title>
+    <title>Libros - LiveInBooks</title>
 </head>
 
 <body>
@@ -62,7 +64,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-productos">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -99,7 +101,7 @@
         </div>
 
 
-        <h3 class="h3-libros">Libros: Romance</h3>
+        <h3 class="h3-libros estilo-libros">Libros: Romance</h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -130,7 +132,7 @@
             <button type="button" class="btn btn-success">Ver más</button>
         </div>
 
-        <h3 class="h3-libros">Libros: Fantasia</h3>
+        <h3 class="h3-libros estilo-libros">Libros: Fantasia</h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -162,7 +164,7 @@
             <button type="button" class="btn btn-success">Ver más</button>
         </div>
 
-        <h3 class="h3-libros">Libros: Terror</h3>
+        <h3 class="h3-libros estilo-libros">Libros: Terror</h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -192,7 +194,7 @@
             <button type="button" class="btn btn-success">Ver más</button>
         </div>
 
-        <h3 class="h3-libros">Libros: Misterio</h3>
+        <h3 class="h3-libros estilo-libros">Libros: Misterio</h3>
 
         <div class="containerFigure">
 
@@ -254,7 +256,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4 footer-col">
-                    <h3 class="h3__Footer">Navegación</h3>
+                    <h3 class="h3-footer">Navegación</h3>
                     <ul class="ul-footer">
                         <li>Libros</li>
                         <li>Mangas</li>
