--- a/merchandising.html
+++ b/merchandising.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="merchandising, pops, llaveros, coleccionables, indumentaria, tazas">
+    <meta name="description" content="Comprar artículos de merchandising en la tienda online de LiveInBooks- Artículos de colección - Coleccionables - Muñecos POPs - Indumentaria">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>LiveInBooks</title>
+    <title>Merchandising - LiveInBooks</title>
 </head>
 
 <body>
@@ -62,7 +64,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-productos">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -95,7 +97,7 @@
         </div>
 
 
-        <h3 class="h3-libros">Remeras</h3>
+        <h3 class="h3-libros estilo-merchandising">Remeras</h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -125,7 +127,7 @@
             <button type="button" class="btn btn-success">Ver más</button>
         </div>
 
-        <h3 class="h3-libros">Tazas</h3>
+        <h3 class="h3-libros estilo-merchandising">Tazas</h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -155,7 +157,7 @@
         </div>
 
 
-        <h3 class="h3-libros">POPS</h3>
+        <h3 class="h3-libros estilo-merchandising">POPS</h3>
 
         <div class="containerFigure">
             <figure class="figure">
@@ -184,7 +186,7 @@
             <button type="button" class="btn btn-success">Ver más</button>
         </div>
 
-        <h3 class="h3-libros">Llaveros</h3>
+        <h3 class="h3-libros estilo-merchandising">Llaveros</h3>
 
         <div class="containerFigure">
 
@@ -214,9 +216,7 @@
             <button type="button" class="btn btn-success">Ver más</button>
         </div>
     </main>
-
-
-
+    
     <footer class="text-center footer-style">
         <div class="container">
             <div class="row">
@@ -246,7 +246,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4 footer-col">
-                    <h3 class="h3__Footer">Navegación</h3>
+                    <h3 class="h3-footer">Navegación</h3>
                     <ul class="ul-footer">
                         <li>Libros</li>
                         <li>Mangas</li>
