--- a/sucursales.html
+++ b/sucursales.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="libros, literatura, libreria, sucursal, lectura">
+    <meta name="description" content="Sucursales - LiveInBooks - Centro - Palermo - Flores - Horarios de Atención - Dirección - Contacto">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>LiveInBooks</title>
+    <title>Sucursales - LiveInBooks</title>
 </head>
 
 <body>
@@ -63,7 +65,7 @@
     </header>
 
 
-    <main>
+    <main class="main-sucursales">
         <figure class="figure-sucursales">
             <div class="sucursales">
                 <img src="./img/sucursal 2.jpg" class="figure-img-sucursales img-fluid rounded" alt="...">
@@ -156,7 +158,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4 footer-col">
-                    <h3 class="h3__Footer">Navegación</h3>
+                    <h3 class="h3-footer">Navegación</h3>
                     <ul class="ul-footer">
                         <li>Libros</li>
                         <li>Mangas</li>
