--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keyword" content="libros, literatura, libreria, terror, romance, misterio, fantasia, lectura">
-    <meta name="description" content="">
+    <meta name="keyword" content="libros, literatura, libreria, terror, romance, misterio, fantasia, cuentos, lectura">
+    <meta name="description" content="Encontrá novelas, cuentos, comics, mangas, infantiles, juveniles y más en LIveInBooks">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
