--- a/merchandising.html
+++ b/merchandising.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword" content="merchandising, pops, llaveros, coleccionables, indumentaria, tazas">
-    <meta name="description" content="Comprar artículos de merchandising en la tienda online de LiveInBooks- Artículos de colección - Coleccionables - Muñecos POPs - Indumentaria">
+    <meta name="description" content="Comprar artículos de merchandising en la tienda online de LiveInBooks- Artículos de colección - Muñecos POPs - Indumentaria">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
