--- a/libros.html
+++ b/libros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keyword" content="libros, literatura, libreria, terror, romance, misterio, fantasia, lectura">
+    <meta name="keyword" content="libros, literatura, librería, terror, romance, misterio, fantasía, lectura">
     <meta name="description" content="Libros de romance, fantasía, misterio, terror y más en LivesInBooks">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
