--- a/mangas.html
+++ b/mangas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keyword" content="libros, literatura, libreria, magas, anime, acción, lectura">
+    <meta name="keyword" content="libros, literatura, librería, magas, anime, acción, lectura">
     <meta name="description" content="Encontrá tus mangas favoritos en nuestra tienda online y locales- LiveInBooks">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
