--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keyword" content="libros, literatura, libreria, nosotros, envios, pagos, formulario">
+    <meta name="keyword" content="libros, literatura, librería, nosotros, envios, pagos, formulario">
     <meta name="description" content="Historia - Modalidad de Envio - Medios de Pago - Preguntas Frecuentes - Trabajá con Nosotros - Formulario">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
