--- a/sucursales.html
+++ b/sucursales.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keyword" content="libros, literatura, libreria, sucursal, lectura, locales, atención">
+    <meta name="keyword" content="libros, literatura, librería, sucursal, lectura, locales, atención">
     <meta name="description" content="Sucursales - LiveInBooks - Centro - Palermo - Flores - Horarios de Atención - Dirección - Contacto">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
