--- a/sucursales.html
+++ b/sucursales.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword" content="libros, literatura, librería, sucursal, lectura, locales, atención">
-    <meta name="description" content="Sucursales - LiveInBooks - Centro - Palermo - Flores - Horarios de Atención - Dirección - Contacto">
+    <meta name="description"
+        content="Sucursales - LiveInBooks - Centro - Palermo - Flores - Horarios de Atención - Dirección - Contacto">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="./index.html">LiveInBooks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -69,21 +70,24 @@
         <figure class="figure-sucursales">
             <div class="sucursales">
                 <img src="./img/sucursal 2.jpg" class="figure-img-sucursales img-fluid rounded" alt="...">
-                <iframe
+                <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.001377829555!2d-58.38386623357088!3d-34.60412666804785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacf6895d413%3A0x83f7c16f6125dfc8!2sCerrito%20378%2C%20C1043%20CABA!5e0!3m2!1ses!2sar!4v1643566410163!5m2!1ses!2sar"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
                 </iframe>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, eligendi ut accusantium officiis
-                officia,
-                odit dignissimos ipsam explicabo quidem assumenda nisi numquam quam cupiditate saepe. Temporibus
-                incidunt
-                repudiandae quas earum cupiditate, blanditiis, possimus nihil dignissimos non aut iure laudantium beatae
-                animi tempore! Unde inventore sunt, explicabo, quo autem velit dignissimos a numquam labore eum eligendi
-                necessitatibus! Suscipit mollitia earum enim ea rerum, doloremque repudiandae omnis quod est cumque modi
-                sequi hic dolor ex totam qui quas laborum vitae quis minus adipisci. Exercitationem ipsa eos blanditiis
-                fugiat expedita dolore voluptatibus libero illo impedit dolorum? Consequuntur rem commodi magni mollitia
-                blanditiis eius!</p>
+            <div class="info-sucursales">
+                <p>
+                    DIRECCIÓN: Peatonal Florida 719 - Microcentro - Ciudad Autónoma de Buenos Aires - Argentina
+                </p>
+                <p>
+                    TELÉFONO: +549 11 5219 2446 / +549 11 5235 3339
+                </p>
+                <p>
+                    HORARIOS: Lunes a Jueves de 09:30 a 20:00. Viernes y Sábado de 09:30 a 21:00. Domingo de 12:00 a
+                    20:00.
+                </p>
+            </div>
+
         </figure>
 
         <figure class="figure-sucursales">
@@ -94,16 +98,18 @@
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
                 </iframe>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, eligendi ut accusantium officiis
-                officia,
-                odit dignissimos ipsam explicabo quidem assumenda nisi numquam quam cupiditate saepe. Temporibus
-                incidunt
-                repudiandae quas earum cupiditate, blanditiis, possimus nihil dignissimos non aut iure laudantium beatae
-                animi tempore! Unde inventore sunt, explicabo, quo autem velit dignissimos a numquam labore eum eligendi
-                necessitatibus! Suscipit mollitia earum enim ea rerum, doloremque repudiandae omnis quod est cumque modi
-                sequi hic dolor ex totam qui quas laborum vitae quis minus adipisci. Exercitationem ipsa eos blanditiis
-                fugiat expedita dolore voluptatibus libero illo impedit dolorum? Consequuntur rem commodi magni mollitia
-                blanditiis eius!</p>
+            <div class="info-sucursales">
+                <p>
+                    DIRECCIÓN: Peatonal Florida 719 - Microcentro - Ciudad Autónoma de Buenos Aires - Argentina
+                </p>
+                <p>
+                    TELÉFONO: +549 11 5219 2446 / +549 11 5235 3339
+                </p>
+                <p>
+                    HORARIOS: Lunes a Jueves de 09:30 a 20:00. Viernes y Sábado de 09:30 a 21:00. Domingo de 12:00 a
+                    20:00.
+                </p>
+            </div>
         </figure>
 
         <figure class="figure-sucursales">
@@ -114,16 +120,18 @@
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
                 </iframe>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, eligendi ut accusantium officiis
-                officia,
-                odit dignissimos ipsam explicabo quidem assumenda nisi numquam quam cupiditate saepe. Temporibus
-                incidunt
-                repudiandae quas earum cupiditate, blanditiis, possimus nihil dignissimos non aut iure laudantium beatae
-                animi tempore! Unde inventore sunt, explicabo, quo autem velit dignissimos a numquam labore eum eligendi
-                necessitatibus! Suscipit mollitia earum enim ea rerum, doloremque repudiandae omnis quod est cumque modi
-                sequi hic dolor ex totam qui quas laborum vitae quis minus adipisci. Exercitationem ipsa eos blanditiis
-                fugiat expedita dolore voluptatibus libero illo impedit dolorum? Consequuntur rem commodi magni mollitia
-                blanditiis eius!</p>
+            <div class="info-sucursales">
+                <p>
+                    DIRECCIÓN: Peatonal Florida 719 - Microcentro - Ciudad Autónoma de Buenos Aires - Argentina
+                </p>
+                <p>
+                    TELÉFONO: +549 11 5219 2446 / +549 11 5235 3339
+                </p>
+                <p>
+                    HORARIOS: Lunes a Jueves de 09:30 a 20:00. Viernes y Sábado de 09:30 a 21:00. Domingo de 12:00 a
+                    20:00.
+                </p>
+            </div>
         </figure>
     </main>
 
