--- a/libros.html
+++ b/libros.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="./index.html">LiveInBooks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
