--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword" content="libros, literatura, librería, nosotros, envios, pagos, formulario">
-    <meta name="description" content="Historia - Modalidad de Envio - Medios de Pago - Preguntas Frecuentes - Trabajá con Nosotros - Formulario">
+    <meta name="description"
+        content="Historia - Modalidad de Envio - Medios de Pago - Preguntas Frecuentes - Trabajá con Nosotros - Formulario">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container">
                 <a class="navbar-brand" href="./index.html">LiveInBooks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -63,7 +64,7 @@
             </div>
         </nav>
     </header>
-    
+
     <main class="main-nosotros">
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
@@ -77,17 +78,38 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>Historia</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, adipisci! Eaque,
-                            reprehenderit
-                            facilis officia autem accusantium amet suscipit a dignissimos, ipsum perspiciatis nemo
-                            repudiandae, nam quaerat consequuntur enim omnis reiciendis assumenda? Iusto, accusantium
-                            saepe!
-                            Non nesciunt magni qui explicabo aut ullam mollitia porro amet animi cupiditate, corporis
-                            nostrum odit veritatis.
+                        <p>
+                            Somos una empresa con una basta experiencia en la comercialización de cómics.
+                        </p>
+                        <p>
+                            Nacimos a principios de la década del 90. Comenzamos con un pequeño kiosco de revistas pero
+                            en muy poco tiempo crecimos y nos dedicamos a distribuir cómics. Nos transformamos en el
+                            mayorista más importante de este sector.
+                        </p>
+                        <p>
+                            En el año 2010 dejamos la venta al por mayor y nos dedicamos exclusivamente a la venta
+                            minorista. Emprendiendo un modelo único en Argentina: Una cadena de tiendas de libros. Con
+                            un stock y un surtido nunca antes visto. Nuestro locales se caracterizan por nuestra
+                            iluminación y exhibición. Todos nuestros locales están ubicados en puntos estratégicos de la
+                            ciudad donde se encuentran.
+                        </p>
+                        <p>
+                            Tenemos locales en la Ciudad de Buenos Aires y en el GBA. Y en este momento comenzamos a
+                            expandirnos por el resto Argentina, abriendo locales en sus principales ciudades.
+                        </p>
+                        <p>
+                            Además somos pioneros en el desarrollo tecnológico. A principios de este siglo abrimos
+                            nuestra tienda online. Nos fuimos adentrando en las nuevas tecnologías para acercarles los
+                            cómics a todos los que los deseen. Con el pasar de los años nos transformamos en líderes en
+                            el sector.
+                        </p>
+                        <p>
+                            Somos LiveInBooks
                         </p>
                         <div class="img-libreria">
-                            <img src="./img/libreria antigua.jpeg" alt="Libreria Antigua">
-                            <img src="https://static.abc.es/media/cultura/2021/12/28/foyles-U10010580451iIw-620x349@abc.jpg"
+                            <img class="libreria" src="./img/libreria antigua.jpeg" alt="Libreria Antigua">
+                            <img class="libreria"
+                                src="https://static.abc.es/media/cultura/2021/12/28/foyles-U10010580451iIw-620x349@abc.jpg"
                                 alt="Libreria Antigua2">
                         </div>
                     </div>
@@ -104,13 +126,24 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>Modalidad de Envio</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, adipisci! Eaque,
-                            reprehenderit
-                            facilis officia autem accusantium amet suscipit a dignissimos, ipsum perspiciatis nemo
-                            repudiandae, nam quaerat consequuntur enim omnis reiciendis assumenda? Iusto, accusantium
-                            saepe!
-                            Non nesciunt magni qui explicabo aut ullam mollitia porro amet animi cupiditate, corporis
-                            nostrum odit veritatis.
+                        <p>
+                            Para averiguar en cuánto tiempo recibiré mi compra, debo considerar la salida del depósito
+                            (por ejemplo "normalmente salida del depósito en 3 días"), más el tiempo de envío.
+                        </p>
+                        <p>
+                            La salida del depósito es el tiempo que normalmente nos lleva conseguir los libros que ha
+                            solicitado, desde el momento en que usted realiza la compra.
+                        </p>
+                        <p>
+                            El tiempo de envío varía en función de la distancia desde nuestro centro de distribución.
+                        </p>
+                        <p>
+                            Es decir, salida del depósito + tiempo de envío = tiempo de entrega
+                        </p>
+                        <p>
+                            Ejemplo; un producto que tiene salida de depósito normalmente en 3 días hábiles y que se
+                            entrega en una provincia o localidad sin medidas sanitarias que imposibiliten la entrada de
+                            la empresa postal, espere recibirlo en 10 días hábiles.
                         </p>
                     </div>
                 </div>
@@ -126,13 +159,9 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>Medios de Pago</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, adipisci! Eaque,
-                            reprehenderit
-                            facilis officia autem accusantium amet suscipit a dignissimos, ipsum perspiciatis nemo
-                            repudiandae, nam quaerat consequuntur enim omnis reiciendis assumenda? Iusto, accusantium
-                            saepe!
-                            Non nesciunt magni qui explicabo aut ullam mollitia porro amet animi cupiditate, corporis
-                            nostrum odit veritatis.
+                        <p>Tarjetas de crédito: Visa, Mastercard, American Express, Naranja, Argencard, Cabal, Shoping y
+                            más.
+                            Para más información acerca de cómo pagar a través de Mercado Pago.
                         </p>
                     </div>
                 </div>
@@ -148,13 +177,29 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>Preguntas Frecuentes</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, adipisci! Eaque,
-                            reprehenderit
-                            facilis officia autem accusantium amet suscipit a dignissimos, ipsum perspiciatis nemo
-                            repudiandae, nam quaerat consequuntur enim omnis reiciendis assumenda? Iusto, accusantium
-                            saepe!
-                            Non nesciunt magni qui explicabo aut ullam mollitia porro amet animi cupiditate, corporis
-                            nostrum odit veritatis.
+                        <p>
+                            ¿Venden artículos usados?
+                        </p>
+                        <p>
+                            Todos los productos que vendemos son nuevos y si bien algunas ediciones pueden tener años,
+                            nunca se trata de productos con uso. De operar alguna devolución los mismos deben ser
+                            reintegrados en perfecto estado y a través del mecanismo previstos
+                        </p>
+                        <p>
+                            ¿Puedo agregar un producto luego de realizada la compra?
+                        </p>
+                        <p>
+                            Si el pedido no fue despachado, para agregar un producto a una compra en curso, envíe un
+                            e-mail a logistica@liveinbooks.com informando el número de compra y el título que
+                            desea agregar
+                        </p>
+                        <p>
+                            ¿Puedo cancelar una compra luego de realizada?
+                        </p>
+                        <p>
+                            Para cancelar una compra envíe un e-mail a logistica@liveinbooks.com informando el
+                            número de compra que quiere cancelar. Si la compra ya hubiera sido enviada, al recibir el
+                            paquete debe rechazarlo informando que lo devuelvan al remitente.
                         </p>
                     </div>
                 </div>
@@ -170,14 +215,57 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>Políticas de Privacidad</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, adipisci! Eaque,
-                            reprehenderit
-                            facilis officia autem accusantium amet suscipit a dignissimos, ipsum perspiciatis nemo
-                            repudiandae, nam quaerat consequuntur enim omnis reiciendis assumenda? Iusto, accusantium
-                            saepe!
-                            Non nesciunt magni qui explicabo aut ullam mollitia porro amet animi cupiditate, corporis
-                            nostrum odit veritatis.
+                        <p>
+                            En LiveInBooks estamos comprometidos a respetar y garantizar su privacidad.
                         </p>
+                        <p>
+                            Nuestro sitio utiliza "cookies" para mantener un registro de los ítems que usted suma al
+                            carrito, para recordar información al pasar de página en página sin necesidad de volver a
+                            solicitársela, para recolectar detalles acerca de sus preferencias y las de otros clientes,
+                            para reconocer qué áreas del sitio debemos desarrollar más y qué otras no son de acceso
+                            frecuente.
+                        </p>
+                        <p>
+                            Toda esta información, junto con los e-mails de sugerencias recibidos sirven para modificar
+                            el sitio de manera que sea más amigable o productivo para nuestros clientes.
+                        </p>
+                        <p>
+                            Cuando le solicitamos sus datos personales, lo hacemos para poder procesar, despachar y
+                            avisarle acerca del estado de su orden. El número de teléfono lo solicitamos para el caso
+                            que un representante de servicio al cliente tenga la necesidad de contactarse con usted y no
+                            pueda lograrlo por medio del e-mail.
+                        </p>
+                        <p>
+                            La información acerca de su tarjeta de crédito no queda registrada en nuestras bases de
+                            datos, utilizamos el sistema de Pago Seguro de PayU para compras con tarjetas
+                            internacionales y MercadoPago para compras con tarjetas locales como nexo con las
+                            controladoras de tarjeta de crédito. De esta manera no conocemos los datos de la tarjeta
+                            ingresada en línea, únicamente recibimos un número de autorización o rechazo de la
+                            operación.
+                        </p>
+                        <p>
+                            Cuando se suscribe para recibir novedades por e-mail, únicamente consideramos su dirección
+                            de e-mail para ese tema, no enviamos publicidad no solicitada y no compartimos ni entregamos
+                            nuestras bases de datos a terceras partes bajo ningún motivo.
+                        </p>
+                        <p>
+                            Cuando usted se registra como cliente e informa su clave personal, ésta permanece totalmente
+                            encriptada y si usted la pierde o no la recuerda, nosotros no podemos acceder a recuperarla,
+                            únicamente podemos asignarle una nueva. De esta forma queda garantizada la privacidad de la
+                            misma.
+                        </p>
+                        <p>
+                            Es necesario aclarar que cuando usted clickea sobre un link o un aviso publicitario que lo
+                            conecta con otros sitios web, usted está sujeto a las políticas de dicho sitio. No nos
+                            hacemos responsables por las acciones de estas terceras partes y por ello recomendamos lea
+                            detenidamente la política de privacidad del sitio accedido.
+                        </p>
+                        <p>
+                            Estamos comprometidos a brindar el mejor servicio en línea posible, verifique periódicamente
+                            si hubo algún cambio en esta página, pues el uso del sitio cuspide.com implica el
+                            conocimiento y aceptación de nuestra política de privacidad.
+                        </p>
+
                     </div>
                 </div>
             </div>
@@ -192,13 +280,12 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>Trabajá con Nosotros</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, adipisci! Eaque,
-                            reprehenderit
-                            facilis officia autem accusantium amet suscipit a dignissimos, ipsum perspiciatis nemo
-                            repudiandae, nam quaerat consequuntur enim omnis reiciendis assumenda? Iusto, accusantium
-                            saepe!
-                            Non nesciunt magni qui explicabo aut ullam mollitia porro amet animi cupiditate, corporis
-                            nostrum odit veritatis.
+                        <p>
+                            ¿Querés ser parte del equipo de LivesInBooks? Envianos tu CV a rrhh@liveinbooks.com
+                        </p>
+                        <p>
+                            Para aplicar al puesto de vendedor o cajero en librería enviá tu CV a
+                            rrhh.retail@liveinbooks.com
                         </p>
                     </div>
                 </div>
