arreglos para entrega final

--- a/index.html
+++ b/index.html
@@ -102,28 +102,28 @@
         <h3 class="h3-libros">Libros: Romance</h3>
 
         <div class="containerFigure">
-            <figure class="figure">
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/lo que el viento se llevo.jpg" class="figure-img img-fluid rounded"
                     alt="Lo que el viento se Llevo">
                 <figcaption class="figure-caption">Lo que el viento se Llevo</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/bajo la misma estrella.jpg" class="figure-img img-fluid rounded"
                     alt="Bajo la Misma Estrella">
                 <figcaption class="figure-caption">Bajo la Misma Estrella</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/orgullo y prejuicio.jpg" class="figure-img img-fluid rounded" alt="Orgullo y Prejuicio">
                 <figcaption class="figure-caption">Orgullo y Prejuicio</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/cumbres borrascosas.jpg" class="figure-img img-fluid rounded" alt="Cumbres Borrascosas">
                 <figcaption class="figure-caption">Cumbres Borrascosas</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
+                <p class="figure-caption">$1500</p>
+            </a></figure>
         </div>
 
         <div class="button">
@@ -133,29 +133,29 @@
         <h3 class="h3-libros">Libros: Fantasia</h3>
 
         <div class="containerFigure">
-            <figure class="figure">
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/el señor de los anillos.jpg" class="figure-img img-fluid rounded"
                     alt="El Señor de los Anillos">
                 <figcaption class="figure-caption">El Señor de los Anillos</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/harry potter y la piedra filosofal.jpg" class="figure-img img-fluid rounded"
                     alt="Harry Potter y la Piedra Filosofal">
                 <figcaption class="figure-caption">Harry Potter y la Piedra Filosofal</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/reino de ladrones.jpg" class="figure-img img-fluid rounded" alt="Reino de Ladrones">
                 <figcaption class="figure-caption">Reino de Ladrones</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/cazadores de sombras.jpg" class="figure-img img-fluid rounded"
                     alt="Cazadores de Sombras">
                 <figcaption class="figure-caption">Cazadores de Sombras</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
+                <p class="figure-caption">$1500</p>
+            </a></figure>
         </div>
 
         <div class="button">
@@ -176,27 +176,27 @@
         <h3 class="h3-libros">Libros: Terror</h3>
 
         <div class="containerFigure">
-            <figure class="figure">
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/el basar de los malos sueños.jpg" class="figure-img img-fluid rounded"
                     alt="El Basar de los Malos Sueños">
                 <figcaption class="figure-caption">El Basar de los Malos Sueños</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/el psicoanalista.jpg" class="figure-img img-fluid rounded" alt="El Psicoanalista">
                 <figcaption class="figure-caption">El Psicoanalista</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/el hombre de tiza.jpg" class="figure-img img-fluid rounded" alt="El Hombre de Tiza">
                 <figcaption class="figure-caption">El Hombre de Tiza</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/nothing but.jpg" class="figure-img img-fluid rounded" alt="Nothing but Blackened Teeth">
                 <figcaption class="figure-caption">Nothing but Blackened Teeth</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
+                <p class="figure-caption">$1500</p>
+            </a></figure>
         </div>
 
         <div class="button">
@@ -207,27 +207,27 @@
 
         <div class="containerFigure">
 
-            <figure class="figure">
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/amigo imaginario.jpg" class="figure-img img-fluid rounded" alt="Amigo Imaginario">
                 <figcaption class="figure-caption">Amigo Imaginario</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/la cabaña.jpeg" class="figure-img img-fluid rounded" alt="La Cabaña">
                 <figcaption class="figure-caption">La Cabaña</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/la chica del tren.jpg" class="figure-img img-fluid rounded" alt="La Chica del Tren">
                 <figcaption class="figure-caption">La Chica del Tren</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
-            <figure class="figure">
+                <p class="figure-caption">$1500</p>
+            </a></figure>
+            <figure class="figure"><a href="./paginax.html">
                 <img src="./img/los juegos del hambre.jpg" class="figure-img img-fluid rounded"
                     alt="Los Juegos del Hambre">
                 <figcaption class="figure-caption">Los Juegos del Hambre</figcaption>
-                <p class="figure-caption">$$$$</p>
-            </figure>
+                <p class="figure-caption">$1500</p>
+            </a></figure>
         </div>
 
         <div class="button">
@@ -238,39 +238,14 @@
     <footer class="text-center footer-style">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 footer-col footer-div">
-                    <h3 class="h3-footer">Atención al Cliente</h3>
-                    <ul class="ul-footer">
-                        <li>Políticas de Privacidad</li>
-                        <li>Contacto</li>
-                        <li>Mis Compras</li>
-                        <li>Nosotros</li>
-                        <li>Sucursales</li>
-                        <li>Historia</li>
-                    </ul>
-                </div>
-                <div class="col-md-4 footer-col footer-div">
-                    <h3 class="h3-footer">Redes</h3>
+                <div class="footer-col footer-div">
                     <ul class="list-inline">
-                        <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="facebook"
-                            class="img-redes">
-                        <p> Seguinos en Facebook</p>
-                        <img src="https://play-lh.googleusercontent.com/tT_cdvQunsvESsJKAwiEUFUrTDak8foyjX_DLgp3BdNiBcPsh5ttjHcAE0QapZnmOYlr"
-                            alt="twitter" class="img-redes">
-                        <p>Seguinos en Twitter</p>
-                        <img src="https://pbs.twimg.com/profile_images/730398192169328640/aN0B-LIm_400x400.jpg"
-                            alt="instagram" class="img-redes">
-                        <p>Seguinos en Instagram</p>
-                    </ul>
-                </div>
-                <div class="col-md-4 footer-col footer-div">
-                    <h3 class="h3-footer">Navegación</h3>
-                    <ul class="ul-footer">
-                        <li>Libros</li>
-                        <li>Mangas</li>
-                        <li>Comics</li>
-                        <li>Merchandising</li>
-                        <li>Próximos Lanzamientos</li>
+                        <a href="./paginax.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/800px-Facebook_logo_%28square%29.png" alt="facebook" 
+                            class="img-redes"></a>
+                        <a href="./paginax.html"><img src="https://play-lh.googleusercontent.com/tT_cdvQunsvESsJKAwiEUFUrTDak8foyjX_DLgp3BdNiBcPsh5ttjHcAE0QapZnmOYlr"
+                            alt="twitter" class="img-redes"></a>
+                        <a href="./paginax.html"><img src="https://pbs.twimg.com/profile_images/730398192169328640/aN0B-LIm_400x400.jpg"
+                            alt="instagram" class="img-redes"></a>
                     </ul>
                 </div>
             </div>
