--- a/nosotros.html
+++ b/nosotros.html
@@ -77,7 +77,6 @@
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Historia</strong>
                         <p>
                             Somos una empresa con una basta experiencia en la comercialización de cómics.
                         </p>
@@ -125,7 +124,6 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Modalidad de Envio</strong>
                         <p>
                             Para averiguar en cuánto tiempo recibiré mi compra, debo considerar la salida del depósito
                             (por ejemplo "normalmente salida del depósito en 3 días"), más el tiempo de envío.
@@ -158,7 +156,6 @@
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Medios de Pago</strong>
                         <p>Tarjetas de crédito: Visa, Mastercard, American Express, Naranja, Argencard, Cabal, Shoping y
                             más.
                             Para más información acerca de cómo pagar a través de Mercado Pago.
@@ -176,7 +173,6 @@
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Preguntas Frecuentes</strong>
                         <p>
                             ¿Venden artículos usados?
                         </p>
@@ -214,7 +210,6 @@
                 <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Políticas de Privacidad</strong>
                         <p>
                             En LiveInBooks estamos comprometidos a respetar y garantizar su privacidad.
                         </p>
@@ -279,7 +274,6 @@
                 <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Trabajá con Nosotros</strong>
                         <p>
                             ¿Querés ser parte del equipo de LivesInBooks? Envianos tu CV a rrhh@liveinbooks.com
                         </p>
@@ -314,39 +308,14 @@
     <footer class="text-center footer-style">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 footer-col">
-                    <h3 class="h3-footer">Atención al Cliente</h3>
-                    <ul class="ul-footer">
-                        <li>Políticas de Privacidad</li>
-                        <li>Contacto</li>
-                        <li>Mis Compras</li>
-                        <li>Nosotros</li>
-                        <li>Sucursales</li>
-                        <li>Historia</li>
-                    </ul>
-                </div>
-                <div class="col-md-4 footer-col footer-div">
-                    <h3 class="h3-footer">Redes</h3>
+                <div class="footer-col footer-div">
                     <ul class="list-inline">
-                        <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="facebook"
-                            class="img-redes">
-                        <p> Seguinos en Facebook</p>
-                        <img src="https://play-lh.googleusercontent.com/tT_cdvQunsvESsJKAwiEUFUrTDak8foyjX_DLgp3BdNiBcPsh5ttjHcAE0QapZnmOYlr"
-                            alt="twitter" class="img-redes">
-                        <p>Seguinos en Twitter</p>
-                        <img src="https://pbs.twimg.com/profile_images/730398192169328640/aN0B-LIm_400x400.jpg"
-                            alt="instagram" class="img-redes">
-                        <p>Seguinos en Instagram</p>
-                    </ul>
-                </div>
-                <div class="col-md-4 footer-col">
-                    <h3 class="h3-footer">Navegación</h3>
-                    <ul class="ul-footer">
-                        <li>Libros</li>
-                        <li>Mangas</li>
-                        <li>Comics</li>
-                        <li>Merchandising</li>
-                        <li>Próximos Lanzamientos</li>
+                        <a href="./paginax.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/800px-Facebook_logo_%28square%29.png" alt="facebook" 
+                            class="img-redes"></a>
+                        <a href="./paginax.html"><img src="https://play-lh.googleusercontent.com/tT_cdvQunsvESsJKAwiEUFUrTDak8foyjX_DLgp3BdNiBcPsh5ttjHcAE0QapZnmOYlr"
+                            alt="twitter" class="img-redes"></a>
+                        <a href="./paginax.html"><img src="https://pbs.twimg.com/profile_images/730398192169328640/aN0B-LIm_400x400.jpg"
+                            alt="instagram" class="img-redes"></a>
                     </ul>
                 </div>
             </div>
