--- a/sucursales.html
+++ b/sucursales.html
@@ -67,6 +67,9 @@
 
 
     <main class="main-sucursales">
+
+        <h3 class="h3-libros">Sucursal Microcentro</h3>
+
         <figure class="figure-sucursales">
             <div class="sucursales">
                 <img src="./img/sucursal 2.jpg" class="figure-img-sucursales img-fluid rounded" alt="...">
@@ -77,18 +80,18 @@
             </div>
             <div class="info-sucursales">
                 <p>
-                    DIRECCIÓN: Peatonal Florida 719 - Microcentro - Ciudad Autónoma de Buenos Aires - Argentina
+                    DIRECCIÓN: Av. Corrientes 1384 - Microcentro - Ciudad Autónoma de Buenos Aires
                 </p>
                 <p>
-                    TELÉFONO: +549 11 5219 2446 / +549 11 5235 3339
+                    TELÉFONO: +549 11 3987 0661
                 </p>
                 <p>
-                    HORARIOS: Lunes a Jueves de 09:30 a 20:00. Viernes y Sábado de 09:30 a 21:00. Domingo de 12:00 a
-                    20:00.
+                    HORARIOS: Lunes a Sábado de 09:30 a 21:00. Domingo de 13:00 a 21:00.
                 </p>
             </div>
-
         </figure>
+
+        <h3 class="h3-libros">Sucursal Florida</h3>
 
         <figure class="figure-sucursales">
             <div class="sucursales">
@@ -100,17 +103,18 @@
             </div>
             <div class="info-sucursales">
                 <p>
-                    DIRECCIÓN: Peatonal Florida 719 - Microcentro - Ciudad Autónoma de Buenos Aires - Argentina
+                    DIRECCIÓN: Peatonal Florida 719 - Microcentro - Ciudad Autónoma de Buenos Aires
                 </p>
                 <p>
                     TELÉFONO: +549 11 5219 2446 / +549 11 5235 3339
                 </p>
                 <p>
-                    HORARIOS: Lunes a Jueves de 09:30 a 20:00. Viernes y Sábado de 09:30 a 21:00. Domingo de 12:00 a
-                    20:00.
+                    HORARIOS: Lunes a Jueves de 09:30 a 20:00. Viernes y Sábado de 09:30 a 21:00.
                 </p>
             </div>
         </figure>
+
+        <h3 class="h3-libros">Sucursal Juramento</h3>
 
         <figure class="figure-sucursales">
             <div class="sucursales">
@@ -122,57 +126,30 @@
             </div>
             <div class="info-sucursales">
                 <p>
-                    DIRECCIÓN: Peatonal Florida 719 - Microcentro - Ciudad Autónoma de Buenos Aires - Argentina
+                    DIRECCIÓN: Av. Juramento 2385 - Belgrano - Ciudad Autónoma de Buenos Aires
                 </p>
                 <p>
-                    TELÉFONO: +549 11 5219 2446 / +549 11 5235 3339
+                    TELÉFONO: +549 11 4780 4841
                 </p>
                 <p>
-                    HORARIOS: Lunes a Jueves de 09:30 a 20:00. Viernes y Sábado de 09:30 a 21:00. Domingo de 12:00 a
-                    20:00.
+                    HORARIOS: Lunes a Sábado de 09:30 a 21:00. Domingo de 13:00 a 21:00.
                 </p>
             </div>
         </figure>
     </main>
 
-
-
+    
     <footer class="text-center footer-style">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 footer-col">
-                    <h3 class="h3-footer">Atención al Cliente</h3>
-                    <ul class="ul-footer">
-                        <li>Políticas de Privacidad</li>
-                        <li>Contacto</li>
-                        <li>Mis Compras</li>
-                        <li>Nosotros</li>
-                        <li>Sucursales</li>
-                        <li>Historia</li>
-                    </ul>
-                </div>
-                <div class="col-md-4 footer-col footer-div">
-                    <h3 class="h3-footer">Redes</h3>
+                <div class="footer-col footer-div">
                     <ul class="list-inline">
-                        <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="facebook"
-                            class="img-redes">
-                        <p> Seguinos en Facebook</p>
-                        <img src="https://play-lh.googleusercontent.com/tT_cdvQunsvESsJKAwiEUFUrTDak8foyjX_DLgp3BdNiBcPsh5ttjHcAE0QapZnmOYlr"
-                            alt="twitter" class="img-redes">
-                        <p>Seguinos en Twitter</p>
-                        <img src="https://pbs.twimg.com/profile_images/730398192169328640/aN0B-LIm_400x400.jpg"
-                            alt="instagram" class="img-redes">
-                        <p>Seguinos en Instagram</p>
-                    </ul>
-                </div>
-                <div class="col-md-4 footer-col">
-                    <h3 class="h3-footer">Navegación</h3>
-                    <ul class="ul-footer">
-                        <li>Libros</li>
-                        <li>Mangas</li>
-                        <li>Comics</li>
-                        <li>Merchandising</li>
-                        <li>Próximos Lanzamientos</li>
+                        <a href="./paginax.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/800px-Facebook_logo_%28square%29.png" alt="facebook" 
+                            class="img-redes"></a>
+                        <a href="./paginax.html"><img src="https://play-lh.googleusercontent.com/tT_cdvQunsvESsJKAwiEUFUrTDak8foyjX_DLgp3BdNiBcPsh5ttjHcAE0QapZnmOYlr"
+                            alt="twitter" class="img-redes"></a>
+                        <a href="./paginax.html"><img src="https://pbs.twimg.com/profile_images/730398192169328640/aN0B-LIm_400x400.jpg"
+                            alt="instagram" class="img-redes"></a>
                     </ul>
                 </div>
             </div>
